# tempsys-firmware

./: Cargo.toml  README.md  build.rs  memory.x  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: rust_ci.yml
src/: constants.rs  main.rs  temperature.rs  voltage.rs
